--- a/EmailDialog.html
+++ b/EmailDialog.html
@@ -2,15 +2,53 @@
 <html>
   <head>
     <base target="_top">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
     <style>
-      body { font-family: Arial, sans-serif; background-color: #f8f9fa; }
-      .container { padding: 20px; }
-      label { display: block; margin-top: 15px; margin-bottom: 5px; color: #333; font-weight: bold; }
-      select { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; background-color: white; }
-      button { padding: 10px 15px; border: none; border-radius: 4px; background-color: #4285f4; color: white; cursor: pointer; font-size: 14px; margin-top: 20px;}
+      body {
+        font-family: 'Inter', sans-serif;
+        background-color: #f8f9fa;
+        font-size: 14px;
+        line-height: 1.5;
+      }
+      .container {
+        padding: 20px;
+        max-width: 480px;
+        margin: 0 auto;
+        word-wrap: break-word;
+      }
+      label {
+        display: block;
+        margin-top: 15px;
+        margin-bottom: 5px;
+        color: #333;
+        font-weight: bold;
+      }
+      select {
+        width: 100%;
+        padding: 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background-color: white;
+      }
+      button {
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        background-color: #4285f4;
+        color: white;
+        cursor: pointer;
+        font-size: 14px;
+        margin-top: 20px;
+      }
       button:hover { background-color: #357ae8; }
       .info { margin-top: 15px; color: #555; }
-      .note { font-size: 12px; color: #666; margin-top: 25px; border-top: 1px solid #ddd; padding-top: 15px; }
+      .note {
+        font-size: 12px;
+        color: #666;
+        margin-top: 25px;
+        border-top: 1px solid #ddd;
+        padding-top: 15px;
+      }
     </style>
   </head>
   <body>
