Add Detailed Description field to Event Setup

--- a/EventSetupDialog.html
+++ b/EventSetupDialog.html
@@ -360,8 +360,14 @@
                 
                 <div class="form-group">
                     <label>Tell us more about the event</label>
-                    <div class="helper-text">Provide a detailed description that explains the purpose, activities, and what makes it special</div>
+                    <div class="helper-text">Provide a brief overview that explains the purpose and what makes it special</div>
                     <textarea id="eventDescription" placeholder="Describe your event's goals, target audience, key activities, and unique value proposition..."></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label>Give us the detailed description</label>
+                    <div class="helper-text">Share the full story — agenda highlights, speaker info, or anything else attendees should know <span class="optional-tag">(Optional)</span></div>
+                    <textarea id="detailedDescription" placeholder="Provide a thorough overview of the event, including schedule, speakers, and special elements..."></textarea>
                 </div>
 
                 <div class="form-group">
@@ -654,6 +660,7 @@
                 document.getElementById('eventName').value = details.eventName || '';
                 document.getElementById('eventTagline').value = details.eventTagline || '';
                 document.getElementById('eventDescription').value = details.eventDescription || '';
+                document.getElementById('detailedDescription').value = details.detailedDescription || '';
                 document.getElementById('eventTheme').value = details.theme || '';
                 document.getElementById('keyMessages').value = details.keyMessages || '';
                 document.querySelector(`input[name="eventDuration"][value="${details.eventDuration || 'single'}"]`).checked = true;
@@ -708,6 +715,7 @@
                 eventName: eventName,
                 eventTagline: document.getElementById('eventTagline').value,
                 eventDescription: eventDescription,
+                detailedDescription: document.getElementById('detailedDescription').value,
                 eventDuration: document.querySelector('input[name="eventDuration"]:checked').value,
                 startDate: startDate,
                 startTime: startTime,
