Refocus People sheet on internal roles

--- a/ConfigDialog.html
+++ b/ConfigDialog.html
@@ -246,7 +246,7 @@
                     <label>What types of people will be involved in your event?</label>
                     <div class="helper-text">For example: Staff, Volunteers, Speakers, Attendees, Sponsors</div>
                     <div class="comma-note">Separate each option with a comma</div>
-                    <input type="text" id="peopleCategories" placeholder="Staff, Volunteer, Speaker, Participant">
+                    <input type="text" id="peopleCategories" placeholder="Staff, Volunteer, Organizer, Speaker">
                 </div>
                 
                 <div class="form-group">
